--- a/src/main/resources/templates/monitor/detail.html
+++ b/src/main/resources/templates/monitor/detail.html
@@ -367,7 +367,7 @@
 
             </div>
             <div class="page-footer">
-                © 2014-2022 南京涌亿思信息技术有限公司 苏ICP备17066984号-1
+                © 2014-<span id="currentyear"></span> 南京涌亿思信息技术有限公司 苏ICP备17066984号-1
             </div>
         </div>
     </div>
@@ -391,6 +391,7 @@
 <script th:src="@{/common/tools.js}"></script>
 
 <script type="text/javascript" th:inline="javascript">
+$("#currentyear").text((new Date()).getFullYear());
 
     var groupId = [[${groupid}]];
     var projectId = [[${projectid}]];
