--- a/src/main/resources/templates/publicoption/eventAnalysisList.html
+++ b/src/main/resources/templates/publicoption/eventAnalysisList.html
@@ -154,7 +154,7 @@
 				<!-- footer start  -->
 				<!-- ============================================================== -->
 				<div class="page-footer">
-                    © 2014-2022 南京涌亿思信息技术有限公司  苏ICP备17066984号-1
+                    © 2014-<span id="currentyear"></span> 南京涌亿思信息技术有限公司  苏ICP备17066984号-1
                 </div>
 				<!-- ============================================================== -->
 				<!-- footer end  -->
@@ -197,6 +197,7 @@
 	<script th:src="@{/dist/eventAnalysisReport.js?unixtemp=888888}"></script>
 	<script th:src="@{/assets/libs/block-ui/jquery.blockUI.js}"></script>
 	<script>
+	$("#currentyear").text((new Date()).getFullYear());
 	
 	
 	function search(){
