--- a/src/main/resources/templates/publicoption/eventAnalysisReport.html
+++ b/src/main/resources/templates/publicoption/eventAnalysisReport.html
@@ -271,7 +271,7 @@
                 <!-- footer start  -->
                 <!-- ============================================================== -->
                 <div class="page-footer">
-                    © 2014-2022 南京涌亿思信息技术有限公司  苏ICP备17066984号-1
+                    © 2014-<span id="currentyear"></span> 南京涌亿思信息技术有限公司  苏ICP备17066984号-1
                 </div>
                 <!-- ============================================================== -->
                 <!-- footer end  -->
@@ -353,6 +353,7 @@
     <script th:src="@{/dist/eventAnalysisReport.js}"></script>
     <script th:src="@{/assets/libs/block-ui/jquery.blockUI.js}"></script>
     <script>
+    $("#currentyear").text((new Date()).getFullYear());
    	var dataList=[]
     
  	publicoptionreportlist(1);
