--- a/src/main/resources/templates/report/reportList.html
+++ b/src/main/resources/templates/report/reportList.html
@@ -146,7 +146,7 @@
                     </div>
                 </div>
                 <div class="page-footer">
-                    © 2014-2022 南京涌亿思信息技术有限公司  苏ICP备17066984号-1
+                    © 2014-<span id="currentyear"></span> 南京涌亿思信息技术有限公司  苏ICP备17066984号-1
                 </div>
             </div>
         </div>
@@ -176,6 +176,7 @@
     <script th:src="@{/assets/libs/block-ui/jquery.blockUI.js}"></script>
     
     <script type="text/javascript" th:inline="javascript">
+    $("#currentyear").text((new Date()).getFullYear());
     
 	    var groupId = analysis_groupid;
 	    var projectId = analysis_projectid;
