--- a/src/main/resources/templates/search/full_search.html
+++ b/src/main/resources/templates/search/full_search.html
@@ -84,7 +84,7 @@
                     </div>
                 </div>
             </div>
-            <div class="page-footer">© 2014-2022 南京涌亿思信息技术有限公司 苏ICP备17066984号-1</div>
+            <div class="page-footer">© 2014-<span id="currentyear"></span> 南京涌亿思信息技术有限公司 苏ICP备17066984号-1</div>
         </div>
     </div>
 </div>
@@ -102,6 +102,7 @@
 <script th:src="@{/assets/libs/sweetalert2/dist/sweetalert2.all.min.js}"></script>
 
 <script th:inline="javascript" type="text/javascript">
+$("#currentyear").text((new Date()).getFullYear());
 
     //		var ctx = [[@{/}]];
     var ctx = /*[[@{/}]]*/'';
