--- a/src/main/resources/templates/search/search_knowledge_detail.html
+++ b/src/main/resources/templates/search/search_knowledge_detail.html
@@ -118,7 +118,7 @@
                 </div>
             </div>
             <div class="page-footer">
-                © 2014-2022 南京涌亿思信息技术有限公司 苏ICP备17066984号-1
+                © 2014-<span id="currentyear"></span> 南京涌亿思信息技术有限公司 苏ICP备17066984号-1
             </div>
         </div>
     </div>
@@ -143,6 +143,7 @@
 <script th:src="@{/dist/search_detail.js}"></script>
 
 <script type="text/javascript" th:inline="javascript">
+$("#currentyear").text((new Date()).getFullYear());
 	let html=[[${knowLedge.content_html}]]
 	console.log(html)
 
