--- a/src/main/resources/templates/setting/userCenter.html
+++ b/src/main/resources/templates/setting/userCenter.html
@@ -112,7 +112,7 @@
             <!-- footer start  -->
             <!-- ============================================================== -->
             <div class="page-footer">
-                © 2014-2022 南京涌亿思信息技术有限公司 苏ICP备17066984号-1
+                © 2014-<span id="currentyear"></span> 南京涌亿思信息技术有限公司 苏ICP备17066984号-1
             </div>
             <!-- ============================================================== -->
             <!-- footer end  -->
@@ -213,6 +213,7 @@
     <!-- 右上角提示 -->
     <script src="../assets/libs/block-ui/jquery.blockUI.js"></script>
     <script type="text/javascript" th:inline="javascript">
+    $("#currentyear").text((new Date()).getFullYear());
 	    $(function(){
 	  	  getuser()
 	    });
