--- a/src/main/resources/templates/doctor/doctorDetail.html
+++ b/src/main/resources/templates/doctor/doctorDetail.html
@@ -238,7 +238,7 @@
 		</div>
 	</div>
 	<div class="page-footer">
-        © 2014-2022 南京涌亿思信息技术有限公司 苏ICP备17066984号-1
+        © 2014-<span id="currentyear"></span> 南京涌亿思信息技术有限公司 苏ICP备17066984号-1
     </div>
 </div>
 <script th:src="@{/assets/libs/jquery/dist/jquery.min.js}"></script>
@@ -259,6 +259,7 @@
 <script th:src="@{/assets/libs/block-ui/jquery.blockUI.js}"></script>
 <script src="https://cdn.jsdelivr.net/npm/jutils-src"></script>
 <script th:inline="javascript" type="text/javascript">
+$("#currentyear").text((new Date()).getFullYear());
 	var articleId = [[${articleid}]];
 	var menu = [[${menu}]];
 	$('.navLi').click(function () {
