--- a/src/main/resources/templates/projectCenter/createProject.html
+++ b/src/main/resources/templates/projectCenter/createProject.html
@@ -259,7 +259,7 @@
                 </div>
             </div>
             <div class="page-footer">
-                © 2014-2022 南京涌亿思信息技术有限公司 苏ICP备17066984号-1
+                © 2014-<span id="currentyear"></span> 南京涌亿思信息技术有限公司 苏ICP备17066984号-1
             </div>
         </div>
     </div>
@@ -292,6 +292,7 @@
 <script th:src="@{/assets/libs/sweetalert2/dist/sweetalert2.all.min.js}"></script>
 
 <script th:inline="javascript" type="text/javascript">
+$("#currentyear").text((new Date()).getFullYear());
 
     var groupId = [[${groupId}]];
 
