--- a/src/main/resources/templates/projectCenter/editProject.html
+++ b/src/main/resources/templates/projectCenter/editProject.html
@@ -354,7 +354,7 @@
                 </div>
             </div>
             <div class="page-footer">
-                © 2014-2022 南京涌亿思信息技术有限公司 苏ICP备17066984号-1
+                © 2014-<span id="currentyear"></span> 南京涌亿思信息技术有限公司 苏ICP备17066984号-1
             </div>
         </div>
     </div>
@@ -379,6 +379,7 @@
 <script th:src="@{/assets/libs/bootstrap-switch/dist/js/bootstrap-switch.min.js}"></script>
 
 <script type="text/javascript" th:inline="javascript">
+$("#currentyear").text((new Date()).getFullYear());
 
     let edit_projectid = '[[${edit_projectid}]]';
     let edit_groupid = '[[${edit_groupid}]]';
