--- a/src/main/resources/templates/projectCenter/projectlist.html
+++ b/src/main/resources/templates/projectCenter/projectlist.html
@@ -132,7 +132,7 @@
                 </div>
             </div>
             <div class="page-footer">
-                © 2014-2022 南京涌亿思信息技术有限公司 苏ICP备17066984号-1
+                © 2014-<span id="currentyear"></span> 南京涌亿思信息技术有限公司 苏ICP备17066984号-1
             </div>
         </div>
     </div>
@@ -153,6 +153,7 @@
 <script th:src="@{/assets/libs/block-ui/jquery.blockUI.js}"></script>
 
 <script th:inline="javascript">
+$("#currentyear").text((new Date()).getFullYear());
 
     let currentPage1 = '[[${currentPage}]]';
     let projectsearch1 = [[${projectsearch}]];
