--- a/src/main/resources/templates/projectCenter/projectlistDetail.html
+++ b/src/main/resources/templates/projectCenter/projectlistDetail.html
@@ -120,7 +120,7 @@
                 </div>
             </div>
             <div class="page-footer">
-                © 2014-2022 南京涌亿思信息技术有限公司 苏ICP备17066984号-1
+                © 2014-<span id="currentyear"></span> 南京涌亿思信息技术有限公司 苏ICP备17066984号-1
             </div>
         </div>
     </div>
@@ -140,6 +140,7 @@
 <script th:src="@{/dist/js/pages.js}"></script>
 <script th:src="@{/assets/libs/block-ui/jquery.blockUI.js}"></script>
 <script th:inline="javascript" type="text/javascript">
+$("#currentyear").text((new Date()).getFullYear());
 
     let detail_projectid = '[[${detail_projectid}]]';
     var groupiddetail = [[${groupid}]];
