--- a/src/main/resources/templates/search/fullSearch.html
+++ b/src/main/resources/templates/search/fullSearch.html
@@ -152,7 +152,7 @@
                 <!-- footer start  -->
                 <!-- ============================================================== -->
                 <div class="page-footer">
-                    © 2014-2022 南京涌亿思信息技术有限公司  苏ICP备17066984号-1
+                    © 2014-<span id="currentyear"></span> 南京涌亿思信息技术有限公司  苏ICP备17066984号-1
                 </div>
                 <!-- ============================================================== -->
                 <!-- footer end  -->
@@ -189,6 +189,13 @@
     <script th:src="@{/assets/libs/sweetalert2/dist/sweetalert2.all.min.js}"></script>
     <script th:src="@{/dist/js/pages.js}"></script>
     <script th:src="@{/dist/search.js}"></script>
+    <script type="text/javascript">
+    
+    $("#currentyear").text((new Date()).getFullYear());
+    
+    </script>
+    
+    
 
     <!--<script th:inline="javascript" type="text/javascript">-->
     <!---->
