--- a/src/main/resources/templates/search/search_company_detail.html
+++ b/src/main/resources/templates/search/search_company_detail.html
@@ -159,7 +159,7 @@
                 </div>
             </div>
             <div class="page-footer">
-                © 2014-2022 南京涌亿思信息技术有限公司 苏ICP备17066984号-1
+                © 2014-<span id="currentyear"></span> 南京涌亿思信息技术有限公司 苏ICP备17066984号-1
             </div>
         </div>
     </div>
@@ -185,6 +185,7 @@
 
 <script type="text/javascript" th:inline="javascript">
 
+$("#currentyear").text((new Date()).getFullYear());
     var articleId = [[${articleid}]];
     var menu = [[${menu}]];
     var type = [[${type}]];
