--- a/src/main/resources/templates/search/search_detail.html
+++ b/src/main/resources/templates/search/search_detail.html
@@ -278,7 +278,7 @@
                 </div>
             </div>
             <div class="page-footer">
-                © 2014-2022 南京涌亿思信息技术有限公司 苏ICP备17066984号-1
+                © 2014-<span id="currentyear"></span> 南京涌亿思信息技术有限公司 苏ICP备17066984号-1
             </div>
         </div>
     </div>
@@ -303,6 +303,7 @@
 <script th:src="@{/dist/search_detail.js}"></script>
 
 <script type="text/javascript" th:inline="javascript">
+$("#currentyear").text((new Date()).getFullYear());
 
     var groupId = [[${groupid}]];
     var projectId = [[${projectid}]];
