--- a/src/main/resources/templates/search/search_result.html
+++ b/src/main/resources/templates/search/search_result.html
@@ -1454,7 +1454,7 @@
                 </div>
             </div>
             <div class="page-footer">
-                © 2014-2022 南京涌亿思信息技术有限公司 苏ICP备17066984号-1
+                © 2014-<span id="currentyear"></span> 南京涌亿思信息技术有限公司 苏ICP备17066984号-1
             </div>
         </div>
         <div class="right-filtrate bg-white">
@@ -1688,6 +1688,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/jutils-src"></script>
 <script th:inline="javascript" type="text/javascript">
+$("#currentyear").text((new Date()).getFullYear());
 	var ctx = [[@{/}]];
 	var pageNum = [[${page}]];
 	var sourcename = [[${source_name}]];
