--- a/src/main/resources/templates/setting/feedback.html
+++ b/src/main/resources/templates/setting/feedback.html
@@ -435,7 +435,7 @@
                 <!-- footer start  -->
                 <!-- ============================================================== -->
                 <div class="page-footer">
-                    © 2014-2022 南京涌亿思信息技术有限公司 苏ICP备17066984号-1
+                    © 2014-<span id="currentyear"></span> 南京涌亿思信息技术有限公司 苏ICP备17066984号-1
                 </div>
                 <!-- ============================================================== -->
                 <!-- footer end  -->
@@ -474,7 +474,7 @@
     <!-- 右上角提示 -->
     <script src="../assets/libs/block-ui/jquery.blockUI.js"></script>
     <script>
-    
+    $("#currentyear").text((new Date()).getFullYear());
 	    $('.navLi').click(function(){
 	    	jumpNavLocation($(this).data('type'), null, null);
 	    })
