--- a/src/main/resources/templates/setting/warning.html
+++ b/src/main/resources/templates/setting/warning.html
@@ -89,7 +89,7 @@
             <!-- footer start  -->
             <!-- ============================================================== -->
             <div class="page-footer">
-                © 2014-2022 南京涌亿思信息技术有限公司 苏ICP备17066984号-1
+                © 2014-<span id="currentyear"></span> 南京涌亿思信息技术有限公司 苏ICP备17066984号-1
             </div>
             <!-- ============================================================== -->
             <!-- footer end  -->
@@ -131,6 +131,7 @@
 
 <!--<script th:src="@{/common/common.js}"></script>-->
 <script type="text/javascript" th:inline="javascript">
+$("#currentyear").text((new Date()).getFullYear());
     var groupId = [[${groupid}]];
     var options = $('#group-select option:selected');
     $('#group-select').val(groupId)
