--- a/src/main/resources/templates/common/project_left.html
+++ b/src/main/resources/templates/common/project_left.html
@@ -35,14 +35,13 @@
 	         		<div class="home-footer__bottom-content__share__qrcode" id ="home-footer__bottom-content__share__qrcode">
 			          	<!-- <img th:src="@{/assets/images/QRcode.jpg}" alt="wechat" style="width:120px;height:120px;border-radius:4px;"> -->
 			        </div>
-	         		<div class="download-logo-box" title="反馈建议">
-	         			<!-- <a th:href="@{/system/feedback}"> -->
+	         		<!-- <div class="download-logo-box" title="反馈建议">
 	         			<a href="#">
 			         		<svg class="icon" aria-hidden="true">
 						    <use xlink:href="#icon-serve"></use>
 							</svg>
 						</a>
-	         		</div>
+	         		</div> -->
 	         	</div>
          	</div>
         </nav>
