--- a/src/main/resources/templates/common/setting_left.html
+++ b/src/main/resources/templates/common/setting_left.html
@@ -37,12 +37,12 @@
                         <span class="hide-menu">账号管理</span>
                     </a>
                 </li>
-                <li class="sidebar-item">
+               <!--  <li class="sidebar-item">
                     <a th:classappend="${settingLeft == 'feedback' ? 'active' : ''}" class="sidebar-link waves-effect waves-dark" th:href="@{/system/feedback}" aria-expanded="false">
                         <i class="mdi mdi-message-text-outline"></i>
                         <span class="hide-menu">反馈建议</span>
                     </a>
-                </li>
+                </li> -->
             </ul>
             <div class="left-foot-wechact">
 	         	<div class="wechat-logo-box-card">
