--- a/src/main/resources/templates/projectCenter/projectlistDetail.html
+++ b/src/main/resources/templates/projectCenter/projectlistDetail.html
@@ -90,7 +90,7 @@
 	                                    <td>主体关键词</td>
 	                                    <td th:text="${projectDetail.subject_word}"> </td>
 	                                </tr>
-	                                <th:block th:if='${projectDetail.project_type == 2}'>
+	                                <!-- <th:block th:if='${projectDetail.project_type == 2}'>
 	                                    <tr>
 	                                        <td>国家/城市/地域 关键词</td>
 	                                        <td th:text="${projectDetail.regional_word}"> 江苏省、江苏、南京、南京市、中国 、大陆、中国境内</td>
@@ -107,7 +107,7 @@
 	                                        <td>事件/动词 关键词</td>
 	                                        <td th:text="${projectDetail.event_word}"> 疫情、新冠状病毒、病毒、美股、美股熔断、自然灾害、蝗虫灾害</td>
 	                                    </tr>
-	                                </th:block>
+	                                </th:block> -->
 	                                <tr>
 	                                    <td>监测屏蔽歧义词</td>
 	                                    <td th:text="${projectDetail.stop_word}">计算机病毒、杀毒软件</td>
