--- a/src/main/resources/templates/projectCenter/createProject.html
+++ b/src/main/resources/templates/projectCenter/createProject.html
@@ -200,7 +200,7 @@
                                         </a>
                                     </div>
                                 </div>
-                                <div class="create-line2 m-b-20">
+                                <!-- <div class="create-line2 m-b-20">
                                     <span>国家/城市/地域 关键词</span>
                                     <textarea class="form-control" name="" id="proarea" rows="4"
                                               placeholder='关键词之间用逗号","隔开;例如：美国，上海，北京，滕家沟，南京西路'></textarea>
@@ -211,8 +211,8 @@
                                             <i class="fa fa-question-circle"></i>
                                         </a>
                                     </div>
-                                </div>
-                                <div class="create-line2 m-b-20">
+                                </div> -->
+                                <!-- <div class="create-line2 m-b-20">
                                     <span>人物/机构/企业 关键词</span>
                                     <textarea class="form-control" name="" id="properson" rows="4"
                                               placeholder='关键词之间用逗号","隔开；例如：马云，北京网安中心，腾讯科技'></textarea>
@@ -223,8 +223,8 @@
                                             <i class="fa fa-question-circle"></i>
                                         </a>
                                     </div>
-                                </div>
-                                <div class="create-line2 m-b-20">
+                                </div> -->
+                                <!-- <div class="create-line2 m-b-20">
                                     <span>事件/动词 关键词</span>
                                     <textarea class="form-control" name="" id="proaccident" rows="4"
                                               placeholder='关键词之间用逗号","隔开；例如：高管离职，拖欠工资，跑路，开销，焦虑'></textarea>
@@ -235,7 +235,7 @@
                                             <i class="fa fa-question-circle"></i>
                                         </a>
                                     </div>
-                                </div>
+                                </div> -->
                                 <div class="create-line2 m-b-20">
                                     <span>监测屏蔽歧义词</span>
                                     <textarea class="form-control" name="" id="proshield" rows="4"
@@ -495,9 +495,12 @@ $("#currentyear").text((new Date()).getFullYear());
     $("#gosubmit").click(function () {
         var proname = $("#proname").val();
         var prokeywords = $("#prokeywords").val();
-        var properson = $("#properson").val();
-        var proarea = $("#proarea").val();
-        var proaccident = $("#proaccident").val();
+       // var properson = $("#properson").val();
+        var properson = '';
+        //var proarea = $("#proarea").val();
+        var proarea = '';
+        //var proaccident = $("#proaccident").val();
+        var proaccident = '';
         var proshield = $("#proshield").val();
         if (proname == '') {
             $("#proname").addClass("text-error");
