集成站点统计

--- a/src/main/resources/templates/common/setting_left.html
+++ b/src/main/resources/templates/common/setting_left.html
@@ -77,6 +77,7 @@
     <!-- End Sidebar scroll-->
     <script th:src="@{/assets/libs/jquery/dist/jquery.min.js}"></script>
 <script th:src="@{/dist/project.js}"></script>
+<script th:src="@{/dist/baidu/baidu_statistics.js}"></script>
     <script th:inline="javascript" type="text/javascript">
     var ctxPath = /*[[@{/}]]*/'';
         	/* $(document).ready(function () {
