--- a/src/main/resources/templates/common/zhheader.html
+++ b/src/main/resources/templates/common/zhheader.html
@@ -244,6 +244,7 @@
     <script th:src="@{/common/tools.js}"></script>
     <script th:src="@{/dist/js/sidebarmenu.js}"></script>
     <script th:src="@{/common/header.js}"></script>
+    <script th:src="@{/dist/baidu/baidu_statistics.js}"></script>
     <script th:inline="javascript" type="text/javascript">
         var ctxPath = /*[[@{/}]]*/'';
         countDown();
