--- a/src/main/resources/templates/displayboard/displayboard.html
+++ b/src/main/resources/templates/displayboard/displayboard.html
@@ -1027,6 +1027,7 @@
 		<!-- <script th:src="@{/dist/displayboard.js}"></script> -->
 		<script th:src="@{/dist/displayboard/displayboard.js?t=0616}"></script>
 		<!-- <script src=" dist/js/pages/dashboards/dashboard2.js"></script> -->
+		<script th:src="@{/dist/baidu/baidu_statistics.js}"></script>
 		<script th:src="@{/assets/libs/sweetalert/sweetalert.min.js}"></script>
 		<script>
 		$("#currentyear").text((new Date()).getFullYear());
