--- a/src/main/resources/templates/monitor/monitor.html
+++ b/src/main/resources/templates/monitor/monitor.html
@@ -1890,6 +1890,7 @@
     <script th:src="@{/dist/js/pages.js}"></script>
     <script th:src="@{/assets/libs/block-ui/jquery.blockUI.js}"></script>
     <script th:src="@{/dist/monitor.js?unixtemp=0728}"></script>
+    <script th:src="@{/dist/baidu/baidu_statistics.js}"></script>
     <!--<script src="https://cdn.bootcdn.net/ajax/libs/bootstrap-multiselect/0.9.16/js/bootstrap-multiselect.js"></script>-->
     <!--<script th:src="@{/dist/js/bootstrap-multiselect.js}"></script>-->
     <!--<script src="https://cdn.bootcdn.net/ajax/libs/bootstrap-multiselect/0.9.16/js/bootstrap-multiselect.min.js"></script>-->
