--- a/src/main/resources/templates/professor/professorDetail.html
+++ b/src/main/resources/templates/professor/professorDetail.html
@@ -264,6 +264,7 @@
 <script th:src="@{/dist/js/xsjs/circleChart.es5.min.js}"></script>
 <script th:src="@{/dist/js/xsjs/circleChart.js}"></script>
 <script th:src="@{/dist/js/xsjs/circleChart.min.js}"></script>
+<script th:src="@{/dist/baidu/baidu_statistics.js}"></script>
 <script th:inline="javascript" type="text/javascript">
 $("#currentyear").text((new Date()).getFullYear());
 	var articleId = [[${articleid}]];
