--- a/src/main/resources/templates/projectCenter/projectlistDetail.html
+++ b/src/main/resources/templates/projectCenter/projectlistDetail.html
@@ -139,6 +139,7 @@
 <script th:src="@{/dist/js/projectlist.js}"></script>
 <script th:src="@{/dist/js/pages.js}"></script>
 <script th:src="@{/assets/libs/block-ui/jquery.blockUI.js}"></script>
+<script th:src="@{/dist/baidu/baidu_statistics.js}"></script>
 <script th:inline="javascript" type="text/javascript">
 $("#currentyear").text((new Date()).getFullYear());
 
