--- a/src/main/resources/templates/publicoption/eventAnalysisList.html
+++ b/src/main/resources/templates/publicoption/eventAnalysisList.html
@@ -196,6 +196,7 @@
 	<script th:src="@{/dist/js/publicoption.js?unixtemp=888888}"></script>
 	<script th:src="@{/dist/eventAnalysisReport.js?unixtemp=888888}"></script>
 	<script th:src="@{/assets/libs/block-ui/jquery.blockUI.js}"></script>
+	<script th:src="@{/dist/baidu/baidu_statistics.js}"></script>
 	<script>
 	$("#currentyear").text((new Date()).getFullYear());
 	
