--- a/src/main/resources/templates/publicoption/eventAnalysisReport.html
+++ b/src/main/resources/templates/publicoption/eventAnalysisReport.html
@@ -352,6 +352,7 @@
     <script th:src="@{/dist/js/publicoption.js}"></script>
     <script th:src="@{/dist/eventAnalysisReport.js}"></script>
     <script th:src="@{/assets/libs/block-ui/jquery.blockUI.js}"></script>
+    <script th:src="@{/dist/baidu/baidu_statistics.js}"></script>
     <script>
     $("#currentyear").text((new Date()).getFullYear());
    	var dataList=[]
