--- a/src/main/resources/templates/report/report.html
+++ b/src/main/resources/templates/report/report.html
@@ -733,6 +733,7 @@
     <script th:src="@{/dist/js/china.js}"></script>
     <script th:src="@{/common/tools.js}"></script>
     <script th:src="@{/dist/reportDetail.js?unixtemp=0728}"></script>
+    <script th:src="@{/dist/baidu/baidu_statistics.js}"></script>
     
     <script type="text/javascript" th:inline="javascript">
     $("#currentyear").text((new Date()).getFullYear());
