--- a/src/main/resources/templates/search/fullSearch.html
+++ b/src/main/resources/templates/search/fullSearch.html
@@ -189,6 +189,7 @@
     <script th:src="@{/assets/libs/sweetalert2/dist/sweetalert2.all.min.js}"></script>
     <script th:src="@{/dist/js/pages.js}"></script>
     <script th:src="@{/dist/search.js}"></script>
+    <script th:src="@{/dist/baidu/baidu_statistics.js}"></script>
     <script type="text/javascript">
     
     $("#currentyear").text((new Date()).getFullYear());
