--- a/src/main/resources/templates/search/full_search.html
+++ b/src/main/resources/templates/search/full_search.html
@@ -100,6 +100,7 @@
 <script th:src="@{/dist/js/sidebarmenu.js}"></script>
 <script th:src="@{/dist/js/custom.min.js}"></script>
 <script th:src="@{/assets/libs/sweetalert2/dist/sweetalert2.all.min.js}"></script>
+<script th:src="@{/dist/baidu/baidu_statistics.js}"></script>
 
 <script th:inline="javascript" type="text/javascript">
 $("#currentyear").text((new Date()).getFullYear());
