--- a/src/main/resources/templates/search/search_invite_detail.html
+++ b/src/main/resources/templates/search/search_invite_detail.html
@@ -152,6 +152,7 @@
 <script th:src="@{/assets/extra-libs/c3/c3.min.js}"></script>
 <script th:src="@{/common/tools.js}"></script>
 <script th:src="@{/dist/search_detail.js}"></script>
+<script th:src="@{/dist/baidu/baidu_statistics.js}"></script>
 
 <script type="text/javascript" th:inline="javascript">
 $("#currentyear").text((new Date()).getFullYear());
