--- a/src/main/resources/templates/setting/warning copy 2.html
+++ b/src/main/resources/templates/setting/warning copy 2.html
@@ -518,6 +518,7 @@
     <!-- 右上角提示 -->
     <script src="../assets/libs/block-ui/jquery.blockUI.js"></script>
     <script src="../assets/libs/bootstrap-switch/dist/js/bootstrap-switch.min.js"></script>
+    <script th:src="@{/dist/baidu/baidu_statistics.js}"></script>
     <script>
     $("#currentyear").text((new Date()).getFullYear());
     $('.navLi').click(function(){
