--- a/src/main/resources/templates/setting/warningEdit.html
+++ b/src/main/resources/templates/setting/warningEdit.html
@@ -385,6 +385,7 @@
 <script th:src="@{/assets/libs/block-ui/jquery.blockUI.js}"></script>
 <script src="../assets/libs/bootstrap-switch/dist/js/bootstrap-switch.min.js"></script>
 <script th:src="@{/assets/libs/sweetalert2/dist/sweetalert2.all.min.js}"></script>
+<script th:src="@{/dist/baidu/baidu_statistics.js}"></script>
 
 
 <script type="text/javascript" th:inline="javascript">
