--- a/src/main/resources/templates/setting/warningMessage.html
+++ b/src/main/resources/templates/setting/warningMessage.html
@@ -196,6 +196,7 @@
 <script src="../assets/libs/block-ui/jquery.blockUI.js"></script>
 <script src="../assets/libs/bootstrap-switch/dist/js/bootstrap-switch.min.js"></script>
 <script th:src="@{/common/common.js}"></script>
+<script th:src="@{/dist/baidu/baidu_statistics.js}"></script>
 <script type="text/javascript" th:inline="javascript">
 $("#currentyear").text((new Date()).getFullYear());
     $(".bt-switch input[type='checkbox'], .bt-switch input[type='radio']").bootstrapSwitch();
