--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -113,6 +113,7 @@
 <script th:src="@{/assets/libs/bootstrap/dist/js/bootstrap.min.js}"></script>
 <script th:src="@{/assets/libs/block-ui/jquery.blockUI.js}"></script>
 <script th:src="@{/dist/js/sidebarmenu.js}"></script>
+<script th:src="@{/dist/baidu/baidu_statistics.js}"></script>
 
 <!-- ============================================================== -->
 <!-- This page plugin js -->
