--- a/src/main/resources/templates/userapply/apply.html
+++ b/src/main/resources/templates/userapply/apply.html
@@ -55,6 +55,7 @@
 <script th:src="@{/assets/extra-libs/c3/d3.min.js}"></script>
 <script th:src="@{/assets/extra-libs/c3/c3.min.js}"></script>
 <script th:src="@{/common/tools.js}"></script>
+<script th:src="@{/dist/baidu/baidu_statistics.js}"></script>
 
 <script th:inline="javascript" type="text/javascript">
     var ctxPath = /*[[@{/}]]*/'';
