--- a/src/main/resources/templates/volume/volumeMonitor.html
+++ b/src/main/resources/templates/volume/volumeMonitor.html
@@ -572,6 +572,7 @@
 <script th:src="@{/dist/anycharts/data.js}"></script>
 <script th:src="@{/common/tools.js}"></script>
 <script th:src="@{/dist/volume.js}"></script>
+<script th:src="@{/dist/baidu/baidu_statistics.js}"></script>
 
 <script th:inline="javascript" type="text/javascript">
 $("#currentyear").text((new Date()).getFullYear());
