--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -268,6 +268,7 @@
     <script th:src="@{/assets/libs/jquery/dist/jquery.min.js}"></script>
     <script th:src="@{/common/iconfont.js}"></script>
     <script th:src="@{/common/tools.js}"></script>
+    <script th:src="@{/dist/baidu/baidu_statistics.js}"></script>
     <script th:src="@{/dist/js/sidebarmenu.js}"></script>
     <script th:src="@{/common/header.js}"></script>
     <script th:inline="javascript" type="text/javascript">
