--- a/src/main/resources/templates/common/monitor_left.html
+++ b/src/main/resources/templates/common/monitor_left.html
@@ -41,6 +41,7 @@
     </div>
     <script th:src="@{/assets/libs/jquery/dist/jquery.min.js}"></script>
     <script th:src="@{/common/common.js}"></script>
+    <script th:src="@{/dist/baidu/baidu_statistics.js}"></script>
     <script th:inline="javascript">
         let menu = [[${menu}]];
         common_menu = menu;
