--- a/src/main/resources/templates/common/project_left.html
+++ b/src/main/resources/templates/common/project_left.html
@@ -50,6 +50,7 @@
     <!-- End Sidebar scroll-->
     <script th:src="@{/assets/libs/jquery/dist/jquery.min.js}"></script>
     <script th:src="@{/dist/project.js}"></script>
+    <script th:src="@{/dist/baidu/baidu_statistics.js}"></script>
     <script th:inline="javascript" type="text/javascript">
         var ctxPath = /*[[@{/}]]*/'';
         let group_Id = '[[${groupid}]]';
