--- a/src/main/resources/templates/executionPerson/executionPersonDetail.html
+++ b/src/main/resources/templates/executionPerson/executionPersonDetail.html
@@ -46,6 +46,7 @@
 <script th:src="@{/assets/libs/sweetalert2/dist/sweetalert2.all.min.js}"></script>
 <script th:src="@{/dist/js/pages.js}"></script>
 <script th:src="@{/assets/libs/block-ui/jquery.blockUI.js}"></script>
+<script th:src="@{/dist/baidu/baidu_statistics.js}"></script>
 <script src="https://cdn.jsdelivr.net/npm/jutils-src"></script>
 <script th:inline="javascript" type="text/javascript">
     $("#currentyear").text((new Date()).getFullYear());
