--- a/src/main/resources/templates/projectCenter/createProject.html
+++ b/src/main/resources/templates/projectCenter/createProject.html
@@ -290,6 +290,7 @@
 <script th:src="@{/common/tools.js}"></script>
 <!-- 提示框 -->
 <script th:src="@{/assets/libs/sweetalert2/dist/sweetalert2.all.min.js}"></script>
+<script th:src="@{/dist/baidu/baidu_statistics.js}"></script>
 
 <script th:inline="javascript" type="text/javascript">
 $("#currentyear").text((new Date()).getFullYear());
