--- a/src/main/resources/templates/publicoption/eventAnalysisDetail.html
+++ b/src/main/resources/templates/publicoption/eventAnalysisDetail.html
@@ -848,6 +848,7 @@
 		<script th:src="@{/dist/js/publicoption.js?unixtemp=888888}"></script>
 		<script th:src="@{/dist/eventAnalysisDetail.js?unixtemp=888888}"></script>
 		<script th:src="@{/dist/eventAnalysisReport.js?unixtemp=888888}"></script>
+		<script th:src="@{/dist/baidu/baidu_statistics.js}"></script>
 		<script type="text/javascript" th:inline="javascript">
 		$("#currentyear").text((new Date()).getFullYear());
 		var publicoption=[[${publicoption}]]
