--- a/src/main/resources/templates/report/reportList.html
+++ b/src/main/resources/templates/report/reportList.html
@@ -174,6 +174,7 @@
     <script th:src="@{/dist/js/pages.js}"></script>
     <script th:src="@{/dist/report.js}"></script>
     <script th:src="@{/assets/libs/block-ui/jquery.blockUI.js}"></script>
+    <script th:src="@{/dist/baidu/baidu_statistics.js}"></script>
     
     <script type="text/javascript" th:inline="javascript">
     $("#currentyear").text((new Date()).getFullYear());
