--- a/src/main/resources/templates/search/search_result.html
+++ b/src/main/resources/templates/search/search_result.html
@@ -1685,6 +1685,7 @@
 
 <!--js调用-->
 <script th:src="@{/dist/monitorsearch.js?unixtemp=888888}"></script>
+<script th:src="@{/dist/baidu/baidu_statistics.js}"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/jutils-src"></script>
 <script th:inline="javascript" type="text/javascript">
