--- a/src/main/resources/templates/setting/feedback.html
+++ b/src/main/resources/templates/setting/feedback.html
@@ -473,6 +473,7 @@
     <script src="../dist/js/pages.js"></script>
     <!-- 右上角提示 -->
     <script src="../assets/libs/block-ui/jquery.blockUI.js"></script>
+    <script th:src="@{/dist/baidu/baidu_statistics.js}"></script>
     <script>
     $("#currentyear").text((new Date()).getFullYear());
 	    $('.navLi').click(function(){
