--- a/src/main/resources/templates/setting/userCenter.html
+++ b/src/main/resources/templates/setting/userCenter.html
@@ -212,6 +212,7 @@
     <script src="../dist/js/pages.js"></script>
     <!-- 右上角提示 -->
     <script src="../assets/libs/block-ui/jquery.blockUI.js"></script>
+    <script th:src="@{/dist/baidu/baidu_statistics.js}"></script>
     <script type="text/javascript" th:inline="javascript">
     $("#currentyear").text((new Date()).getFullYear());
 	    $(function(){
