--- a/src/main/resources/templates/setting/warning.html
+++ b/src/main/resources/templates/setting/warning.html
@@ -128,6 +128,7 @@
 <!-- 右上角提示 -->
 <script src="../assets/libs/block-ui/jquery.blockUI.js"></script>
 <script src="../assets/libs/bootstrap-switch/dist/js/bootstrap-switch.min.js"></script>
+<script th:src="@{/dist/baidu/baidu_statistics.js}"></script>
 
 <!--<script th:src="@{/common/common.js}"></script>-->
 <script type="text/javascript" th:inline="javascript">
