集成站点统计

--- a/src/main/resources/templates/monitor/overview.html
+++ b/src/main/resources/templates/monitor/overview.html
@@ -1176,6 +1176,7 @@
 	<script th:src="@{/dist/anycharts/data.js}"></script>
 	<script th:src="@{/dist/analysis.js?unixtemp=0817}"></script>
 	<script th:src="@{/assets/libs/block-ui/jquery.blockUI.js}"></script>
+	<script th:src="@{/dist/baidu/baidu_statistics.js}"></script>
 
 	<script th:inline="javascript" type="text/javascript">
 	$("#currentyear").text((new Date()).getFullYear());
